lab2/out/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> assignment ;
Rule 5     statement -> print ;
Rule 6     statement -> continue ;
Rule 7     statement -> break ;
Rule 8     statement -> return ;
Rule 9     statement -> if_statement
Rule 10    statement -> for
Rule 11    statement -> while
Rule 12    for -> FOR ID ASSIGN expression : expression nested
Rule 13    while -> WHILE condition nested
Rule 14    break -> BREAK
Rule 15    return -> RETURN expression
Rule 16    continue -> CONTINUE
Rule 17    print -> PRINT coma_separated
Rule 18    coma_separated -> expression
Rule 19    coma_separated -> coma_separated , expression
Rule 20    assignment -> ID assign_symbol expression
Rule 21    assignment -> ID slice assign_symbol expression
Rule 22    assign_symbol -> ASSIGN
Rule 23    assign_symbol -> SUBASSIGN
Rule 24    assign_symbol -> ADDASSIGN
Rule 25    assign_symbol -> DIVASSIGN
Rule 26    assign_symbol -> MULTASSIGN
Rule 27    expression -> built_in_function ( term )
Rule 28    expression -> term
Rule 29    expression -> expression + term
Rule 30    expression -> expression - term
Rule 31    expression -> expression / term
Rule 32    expression -> expression * term
Rule 33    expression -> expression EQL term
Rule 34    expression -> expression NEQ term
Rule 35    expression -> expression GT term
Rule 36    expression -> expression GTE term
Rule 37    expression -> expression LT term
Rule 38    expression -> expression LTE term
Rule 39    expression -> - term
Rule 40    vector -> ID TRANSPOSE
Rule 41    vector -> vector TRANSPOSE
Rule 42    expression -> ID dot_operation term
Rule 43    expression -> vector dot_operation term
Rule 44    dot_operation -> DOTADD
Rule 45    dot_operation -> DOTSUB
Rule 46    dot_operation -> DOTMUL
Rule 47    dot_operation -> DOTDIV
Rule 48    vector -> [ vector_contents ]
Rule 49    vector_contents -> vector_element
Rule 50    vector_contents -> vector_contents , vector_element
Rule 51    vector_element -> term
Rule 52    slice -> [ slice_contents ]
Rule 53    slice_contents -> range
Rule 54    slice_contents -> slice_contents , range
Rule 55    range -> term : term
Rule 56    range -> term :
Rule 57    range -> : term
Rule 58    range -> term
Rule 59    if_statement -> if optional_else_ifs optional_else
Rule 60    if -> IF condition nested
Rule 61    optional_else_ifs -> else_ifs
Rule 62    optional_else_ifs -> <empty>
Rule 63    else_ifs -> else_if
Rule 64    else_ifs -> else_ifs else_if
Rule 65    else_if -> ELSE IF condition nested
Rule 66    optional_else -> else
Rule 67    optional_else -> <empty>
Rule 68    else -> ELSE nested
Rule 69    condition -> ( expression )
Rule 70    nested -> { statements }
Rule 71    nested -> statement
Rule 72    term -> ( expression )
Rule 73    term -> vector
Rule 74    term -> INTNUM
Rule 75    term -> STR
Rule 76    term -> FLOATNUM
Rule 77    term -> ID
Rule 78    built_in_function -> EYE
Rule 79    built_in_function -> ONES
Rule 80    built_in_function -> ZEROS

Terminals, with rules where they appear

(                    : 27 69 72
)                    : 27 69 72
*                    : 32
+                    : 29
,                    : 19 50 54
-                    : 30 39
/                    : 31
:                    : 12 55 56 57
;                    : 4 5 6 7 8
ADDASSIGN            : 24
ASSIGN               : 12 22
BREAK                : 14
CONTINUE             : 16
DIVASSIGN            : 25
DOTADD               : 44
DOTDIV               : 47
DOTMUL               : 46
DOTSUB               : 45
ELSE                 : 65 68
EQL                  : 33
EYE                  : 78
FLOATNUM             : 76
FOR                  : 12
GT                   : 35
GTE                  : 36
ID                   : 12 20 21 40 42 77
IF                   : 60 65
INTNUM               : 74
LT                   : 37
LTE                  : 38
MULTASSIGN           : 26
NEQ                  : 34
ONES                 : 79
PRINT                : 17
RETURN               : 15
STR                  : 75
SUBASSIGN            : 23
TRANSPOSE            : 40 41
WHILE                : 13
ZEROS                : 80
[                    : 48 52
]                    : 48 52
error                : 
{                    : 70
}                    : 70

Nonterminals, with rules where they appear

assign_symbol        : 20 21
assignment           : 4
break                : 7
built_in_function    : 27
coma_separated       : 17 19
condition            : 13 60 65
continue             : 6
dot_operation        : 42 43
else                 : 66
else_if              : 63 64
else_ifs             : 61 64
expression           : 12 12 15 18 19 20 21 29 30 31 32 33 34 35 36 37 38 69 72
for                  : 10
if                   : 59
if_statement         : 9
nested               : 12 13 60 65 68
optional_else        : 59
optional_else_ifs    : 59
print                : 5
range                : 53 54
return               : 8
slice                : 21
slice_contents       : 52 54
start                : 0
statement            : 2 3 71
statements           : 1 3 70
term                 : 27 28 29 30 31 32 33 34 35 36 37 38 39 42 43 51 55 55 56 57 58
vector               : 41 43 73
vector_contents      : 48 50
vector_element       : 49 50
while                : 11

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . assignment ;
    (5) statement -> . print ;
    (6) statement -> . continue ;
    (7) statement -> . break ;
    (8) statement -> . return ;
    (9) statement -> . if_statement
    (10) statement -> . for
    (11) statement -> . while
    (20) assignment -> . ID assign_symbol expression
    (21) assignment -> . ID slice assign_symbol expression
    (17) print -> . PRINT coma_separated
    (16) continue -> . CONTINUE
    (14) break -> . BREAK
    (15) return -> . RETURN expression
    (59) if_statement -> . if optional_else_ifs optional_else
    (12) for -> . FOR ID ASSIGN expression : expression nested
    (13) while -> . WHILE condition nested
    (60) if -> . IF condition nested

    ID              shift and go to state 12
    PRINT           shift and go to state 13
    CONTINUE        shift and go to state 14
    BREAK           shift and go to state 15
    RETURN          shift and go to state 16
    FOR             shift and go to state 18
    WHILE           shift and go to state 19
    IF              shift and go to state 20

    start                          shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    print                          shift and go to state 5
    continue                       shift and go to state 6
    break                          shift and go to state 7
    return                         shift and go to state 8
    if_statement                   shift and go to state 9
    for                            shift and go to state 10
    while                          shift and go to state 11
    if                             shift and go to state 17

state 1

    (0) S' -> start .



state 2

    (1) start -> statements .
    (3) statements -> statements . statement
    (4) statement -> . assignment ;
    (5) statement -> . print ;
    (6) statement -> . continue ;
    (7) statement -> . break ;
    (8) statement -> . return ;
    (9) statement -> . if_statement
    (10) statement -> . for
    (11) statement -> . while
    (20) assignment -> . ID assign_symbol expression
    (21) assignment -> . ID slice assign_symbol expression
    (17) print -> . PRINT coma_separated
    (16) continue -> . CONTINUE
    (14) break -> . BREAK
    (15) return -> . RETURN expression
    (59) if_statement -> . if optional_else_ifs optional_else
    (12) for -> . FOR ID ASSIGN expression : expression nested
    (13) while -> . WHILE condition nested
    (60) if -> . IF condition nested

    $end            reduce using rule 1 (start -> statements .)
    ID              shift and go to state 12
    PRINT           shift and go to state 13
    CONTINUE        shift and go to state 14
    BREAK           shift and go to state 15
    RETURN          shift and go to state 16
    FOR             shift and go to state 18
    WHILE           shift and go to state 19
    IF              shift and go to state 20

    statement                      shift and go to state 21
    assignment                     shift and go to state 4
    print                          shift and go to state 5
    continue                       shift and go to state 6
    break                          shift and go to state 7
    return                         shift and go to state 8
    if_statement                   shift and go to state 9
    for                            shift and go to state 10
    while                          shift and go to state 11
    if                             shift and go to state 17

state 3

    (2) statements -> statement .

    ID              reduce using rule 2 (statements -> statement .)
    PRINT           reduce using rule 2 (statements -> statement .)
    CONTINUE        reduce using rule 2 (statements -> statement .)
    BREAK           reduce using rule 2 (statements -> statement .)
    RETURN          reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    WHILE           reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    }               reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> assignment . ;

    ;               shift and go to state 22


state 5

    (5) statement -> print . ;

    ;               shift and go to state 23


state 6

    (6) statement -> continue . ;

    ;               shift and go to state 24


state 7

    (7) statement -> break . ;

    ;               shift and go to state 25


state 8

    (8) statement -> return . ;

    ;               shift and go to state 26


state 9

    (9) statement -> if_statement .

    ID              reduce using rule 9 (statement -> if_statement .)
    PRINT           reduce using rule 9 (statement -> if_statement .)
    CONTINUE        reduce using rule 9 (statement -> if_statement .)
    BREAK           reduce using rule 9 (statement -> if_statement .)
    RETURN          reduce using rule 9 (statement -> if_statement .)
    FOR             reduce using rule 9 (statement -> if_statement .)
    WHILE           reduce using rule 9 (statement -> if_statement .)
    IF              reduce using rule 9 (statement -> if_statement .)
    $end            reduce using rule 9 (statement -> if_statement .)
    ELSE            reduce using rule 9 (statement -> if_statement .)
    }               reduce using rule 9 (statement -> if_statement .)


state 10

    (10) statement -> for .

    ID              reduce using rule 10 (statement -> for .)
    PRINT           reduce using rule 10 (statement -> for .)
    CONTINUE        reduce using rule 10 (statement -> for .)
    BREAK           reduce using rule 10 (statement -> for .)
    RETURN          reduce using rule 10 (statement -> for .)
    FOR             reduce using rule 10 (statement -> for .)
    WHILE           reduce using rule 10 (statement -> for .)
    IF              reduce using rule 10 (statement -> for .)
    $end            reduce using rule 10 (statement -> for .)
    ELSE            reduce using rule 10 (statement -> for .)
    }               reduce using rule 10 (statement -> for .)


state 11

    (11) statement -> while .

    ID              reduce using rule 11 (statement -> while .)
    PRINT           reduce using rule 11 (statement -> while .)
    CONTINUE        reduce using rule 11 (statement -> while .)
    BREAK           reduce using rule 11 (statement -> while .)
    RETURN          reduce using rule 11 (statement -> while .)
    FOR             reduce using rule 11 (statement -> while .)
    WHILE           reduce using rule 11 (statement -> while .)
    IF              reduce using rule 11 (statement -> while .)
    $end            reduce using rule 11 (statement -> while .)
    ELSE            reduce using rule 11 (statement -> while .)
    }               reduce using rule 11 (statement -> while .)


state 12

    (20) assignment -> ID . assign_symbol expression
    (21) assignment -> ID . slice assign_symbol expression
    (22) assign_symbol -> . ASSIGN
    (23) assign_symbol -> . SUBASSIGN
    (24) assign_symbol -> . ADDASSIGN
    (25) assign_symbol -> . DIVASSIGN
    (26) assign_symbol -> . MULTASSIGN
    (52) slice -> . [ slice_contents ]

    ASSIGN          shift and go to state 29
    SUBASSIGN       shift and go to state 30
    ADDASSIGN       shift and go to state 31
    DIVASSIGN       shift and go to state 32
    MULTASSIGN      shift and go to state 33
    [               shift and go to state 34

    assign_symbol                  shift and go to state 27
    slice                          shift and go to state 28

state 13

    (17) print -> PRINT . coma_separated
    (18) coma_separated -> . expression
    (19) coma_separated -> . coma_separated , expression
    (27) expression -> . built_in_function ( term )
    (28) expression -> . term
    (29) expression -> . expression + term
    (30) expression -> . expression - term
    (31) expression -> . expression / term
    (32) expression -> . expression * term
    (33) expression -> . expression EQL term
    (34) expression -> . expression NEQ term
    (35) expression -> . expression GT term
    (36) expression -> . expression GTE term
    (37) expression -> . expression LT term
    (38) expression -> . expression LTE term
    (39) expression -> . - term
    (42) expression -> . ID dot_operation term
    (43) expression -> . vector dot_operation term
    (78) built_in_function -> . EYE
    (79) built_in_function -> . ONES
    (80) built_in_function -> . ZEROS
    (72) term -> . ( expression )
    (73) term -> . vector
    (74) term -> . INTNUM
    (75) term -> . STR
    (76) term -> . FLOATNUM
    (77) term -> . ID
    (40) vector -> . ID TRANSPOSE
    (41) vector -> . vector TRANSPOSE
    (48) vector -> . [ vector_contents ]

    -               shift and go to state 40
    ID              shift and go to state 41
    EYE             shift and go to state 43
    ONES            shift and go to state 44
    ZEROS           shift and go to state 45
    (               shift and go to state 38
    INTNUM          shift and go to state 46
    STR             shift and go to state 47
    FLOATNUM        shift and go to state 48
    [               shift and go to state 49

    coma_separated                 shift and go to state 35
    expression                     shift and go to state 36
    built_in_function              shift and go to state 37
    term                           shift and go to state 39
    vector                         shift and go to state 42

state 14

    (16) continue -> CONTINUE .

    ;               reduce using rule 16 (continue -> CONTINUE .)


state 15

    (14) break -> BREAK .

    ;               reduce using rule 14 (break -> BREAK .)


state 16

    (15) return -> RETURN . expression
    (27) expression -> . built_in_function ( term )
    (28) expression -> . term
    (29) expression -> . expression + term
    (30) expression -> . expression - term
    (31) expression -> . expression / term
    (32) expression -> . expression * term
    (33) expression -> . expression EQL term
    (34) expression -> . expression NEQ term
    (35) expression -> . expression GT term
    (36) expression -> . expression GTE term
    (37) expression -> . expression LT term
    (38) expression -> . expression LTE term
    (39) expression -> . - term
    (42) expression -> . ID dot_operation term
    (43) expression -> . vector dot_operation term
    (78) built_in_function -> . EYE
    (79) built_in_function -> . ONES
    (80) built_in_function -> . ZEROS
    (72) term -> . ( expression )
    (73) term -> . vector
    (74) term -> . INTNUM
    (75) term -> . STR
    (76) term -> . FLOATNUM
    (77) term -> . ID
    (40) vector -> . ID TRANSPOSE
    (41) vector -> . vector TRANSPOSE
    (48) vector -> . [ vector_contents ]

    -               shift and go to state 40
    ID              shift and go to state 41
    EYE             shift and go to state 43
    ONES            shift and go to state 44
    ZEROS           shift and go to state 45
    (               shift and go to state 38
    INTNUM          shift and go to state 46
    STR             shift and go to state 47
    FLOATNUM        shift and go to state 48
    [               shift and go to state 49

    expression                     shift and go to state 50
    built_in_function              shift and go to state 37
    term                           shift and go to state 39
    vector                         shift and go to state 42

state 17

    (59) if_statement -> if . optional_else_ifs optional_else
    (61) optional_else_ifs -> . else_ifs
    (62) optional_else_ifs -> .
    (63) else_ifs -> . else_if
    (64) else_ifs -> . else_ifs else_if
    (65) else_if -> . ELSE IF condition nested

    ID              reduce using rule 62 (optional_else_ifs -> .)
    PRINT           reduce using rule 62 (optional_else_ifs -> .)
    CONTINUE        reduce using rule 62 (optional_else_ifs -> .)
    BREAK           reduce using rule 62 (optional_else_ifs -> .)
    RETURN          reduce using rule 62 (optional_else_ifs -> .)
    FOR             reduce using rule 62 (optional_else_ifs -> .)
    WHILE           reduce using rule 62 (optional_else_ifs -> .)
    IF              reduce using rule 62 (optional_else_ifs -> .)
    $end            reduce using rule 62 (optional_else_ifs -> .)
    }               reduce using rule 62 (optional_else_ifs -> .)
    ELSE            shift and go to state 54

  ! ELSE            [ reduce using rule 62 (optional_else_ifs -> .) ]

    optional_else_ifs              shift and go to state 51
    else_ifs                       shift and go to state 52
    else_if                        shift and go to state 53

state 18

    (12) for -> FOR . ID ASSIGN expression : expression nested

    ID              shift and go to state 55


state 19

    (13) while -> WHILE . condition nested
    (69) condition -> . ( expression )

    (               shift and go to state 57

    condition                      shift and go to state 56

state 20

    (60) if -> IF . condition nested
    (69) condition -> . ( expression )

    (               shift and go to state 57

    condition                      shift and go to state 58

state 21

    (3) statements -> statements statement .

    ID              reduce using rule 3 (statements -> statements statement .)
    PRINT           reduce using rule 3 (statements -> statements statement .)
    CONTINUE        reduce using rule 3 (statements -> statements statement .)
    BREAK           reduce using rule 3 (statements -> statements statement .)
    RETURN          reduce using rule 3 (statements -> statements statement .)
    FOR             reduce using rule 3 (statements -> statements statement .)
    WHILE           reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    }               reduce using rule 3 (statements -> statements statement .)


state 22

    (4) statement -> assignment ; .

    ID              reduce using rule 4 (statement -> assignment ; .)
    PRINT           reduce using rule 4 (statement -> assignment ; .)
    CONTINUE        reduce using rule 4 (statement -> assignment ; .)
    BREAK           reduce using rule 4 (statement -> assignment ; .)
    RETURN          reduce using rule 4 (statement -> assignment ; .)
    FOR             reduce using rule 4 (statement -> assignment ; .)
    WHILE           reduce using rule 4 (statement -> assignment ; .)
    IF              reduce using rule 4 (statement -> assignment ; .)
    $end            reduce using rule 4 (statement -> assignment ; .)
    ELSE            reduce using rule 4 (statement -> assignment ; .)
    }               reduce using rule 4 (statement -> assignment ; .)


state 23

    (5) statement -> print ; .

    ID              reduce using rule 5 (statement -> print ; .)
    PRINT           reduce using rule 5 (statement -> print ; .)
    CONTINUE        reduce using rule 5 (statement -> print ; .)
    BREAK           reduce using rule 5 (statement -> print ; .)
    RETURN          reduce using rule 5 (statement -> print ; .)
    FOR             reduce using rule 5 (statement -> print ; .)
    WHILE           reduce using rule 5 (statement -> print ; .)
    IF              reduce using rule 5 (statement -> print ; .)
    $end            reduce using rule 5 (statement -> print ; .)
    ELSE            reduce using rule 5 (statement -> print ; .)
    }               reduce using rule 5 (statement -> print ; .)


state 24

    (6) statement -> continue ; .

    ID              reduce using rule 6 (statement -> continue ; .)
    PRINT           reduce using rule 6 (statement -> continue ; .)
    CONTINUE        reduce using rule 6 (statement -> continue ; .)
    BREAK           reduce using rule 6 (statement -> continue ; .)
    RETURN          reduce using rule 6 (statement -> continue ; .)
    FOR             reduce using rule 6 (statement -> continue ; .)
    WHILE           reduce using rule 6 (statement -> continue ; .)
    IF              reduce using rule 6 (statement -> continue ; .)
    $end            reduce using rule 6 (statement -> continue ; .)
    ELSE            reduce using rule 6 (statement -> continue ; .)
    }               reduce using rule 6 (statement -> continue ; .)


state 25

    (7) statement -> break ; .

    ID              reduce using rule 7 (statement -> break ; .)
    PRINT           reduce using rule 7 (statement -> break ; .)
    CONTINUE        reduce using rule 7 (statement -> break ; .)
    BREAK           reduce using rule 7 (statement -> break ; .)
    RETURN          reduce using rule 7 (statement -> break ; .)
    FOR             reduce using rule 7 (statement -> break ; .)
    WHILE           reduce using rule 7 (statement -> break ; .)
    IF              reduce using rule 7 (statement -> break ; .)
    $end            reduce using rule 7 (statement -> break ; .)
    ELSE            reduce using rule 7 (statement -> break ; .)
    }               reduce using rule 7 (statement -> break ; .)


state 26

    (8) statement -> return ; .

    ID              reduce using rule 8 (statement -> return ; .)
    PRINT           reduce using rule 8 (statement -> return ; .)
    CONTINUE        reduce using rule 8 (statement -> return ; .)
    BREAK           reduce using rule 8 (statement -> return ; .)
    RETURN          reduce using rule 8 (statement -> return ; .)
    FOR             reduce using rule 8 (statement -> return ; .)
    WHILE           reduce using rule 8 (statement -> return ; .)
    IF              reduce using rule 8 (statement -> return ; .)
    $end            reduce using rule 8 (statement -> return ; .)
    ELSE            reduce using rule 8 (statement -> return ; .)
    }               reduce using rule 8 (statement -> return ; .)


state 27

    (20) assignment -> ID assign_symbol . expression
    (27) expression -> . built_in_function ( term )
    (28) expression -> . term
    (29) expression -> . expression + term
    (30) expression -> . expression - term
    (31) expression -> . expression / term
    (32) expression -> . expression * term
    (33) expression -> . expression EQL term
    (34) expression -> . expression NEQ term
    (35) expression -> . expression GT term
    (36) expression -> . expression GTE term
    (37) expression -> . expression LT term
    (38) expression -> . expression LTE term
    (39) expression -> . - term
    (42) expression -> . ID dot_operation term
    (43) expression -> . vector dot_operation term
    (78) built_in_function -> . EYE
    (79) built_in_function -> . ONES
    (80) built_in_function -> . ZEROS
    (72) term -> . ( expression )
    (73) term -> . vector
    (74) term -> . INTNUM
    (75) term -> . STR
    (76) term -> . FLOATNUM
    (77) term -> . ID
    (40) vector -> . ID TRANSPOSE
    (41) vector -> . vector TRANSPOSE
    (48) vector -> . [ vector_contents ]

    -               shift and go to state 40
    ID              shift and go to state 41
    EYE             shift and go to state 43
    ONES            shift and go to state 44
    ZEROS           shift and go to state 45
    (               shift and go to state 38
    INTNUM          shift and go to state 46
    STR             shift and go to state 47
    FLOATNUM        shift and go to state 48
    [               shift and go to state 49

    expression                     shift and go to state 59
    built_in_function              shift and go to state 37
    term                           shift and go to state 39
    vector                         shift and go to state 42

state 28

    (21) assignment -> ID slice . assign_symbol expression
    (22) assign_symbol -> . ASSIGN
    (23) assign_symbol -> . SUBASSIGN
    (24) assign_symbol -> . ADDASSIGN
    (25) assign_symbol -> . DIVASSIGN
    (26) assign_symbol -> . MULTASSIGN

    ASSIGN          shift and go to state 29
    SUBASSIGN       shift and go to state 30
    ADDASSIGN       shift and go to state 31
    DIVASSIGN       shift and go to state 32
    MULTASSIGN      shift and go to state 33

    assign_symbol                  shift and go to state 60

state 29

    (22) assign_symbol -> ASSIGN .

    -               reduce using rule 22 (assign_symbol -> ASSIGN .)
    ID              reduce using rule 22 (assign_symbol -> ASSIGN .)
    EYE             reduce using rule 22 (assign_symbol -> ASSIGN .)
    ONES            reduce using rule 22 (assign_symbol -> ASSIGN .)
    ZEROS           reduce using rule 22 (assign_symbol -> ASSIGN .)
    (               reduce using rule 22 (assign_symbol -> ASSIGN .)
    INTNUM          reduce using rule 22 (assign_symbol -> ASSIGN .)
    STR             reduce using rule 22 (assign_symbol -> ASSIGN .)
    FLOATNUM        reduce using rule 22 (assign_symbol -> ASSIGN .)
    [               reduce using rule 22 (assign_symbol -> ASSIGN .)


state 30

    (23) assign_symbol -> SUBASSIGN .

    -               reduce using rule 23 (assign_symbol -> SUBASSIGN .)
    ID              reduce using rule 23 (assign_symbol -> SUBASSIGN .)
    EYE             reduce using rule 23 (assign_symbol -> SUBASSIGN .)
    ONES            reduce using rule 23 (assign_symbol -> SUBASSIGN .)
    ZEROS           reduce using rule 23 (assign_symbol -> SUBASSIGN .)
    (               reduce using rule 23 (assign_symbol -> SUBASSIGN .)
    INTNUM          reduce using rule 23 (assign_symbol -> SUBASSIGN .)
    STR             reduce using rule 23 (assign_symbol -> SUBASSIGN .)
    FLOATNUM        reduce using rule 23 (assign_symbol -> SUBASSIGN .)
    [               reduce using rule 23 (assign_symbol -> SUBASSIGN .)


state 31

    (24) assign_symbol -> ADDASSIGN .

    -               reduce using rule 24 (assign_symbol -> ADDASSIGN .)
    ID              reduce using rule 24 (assign_symbol -> ADDASSIGN .)
    EYE             reduce using rule 24 (assign_symbol -> ADDASSIGN .)
    ONES            reduce using rule 24 (assign_symbol -> ADDASSIGN .)
    ZEROS           reduce using rule 24 (assign_symbol -> ADDASSIGN .)
    (               reduce using rule 24 (assign_symbol -> ADDASSIGN .)
    INTNUM          reduce using rule 24 (assign_symbol -> ADDASSIGN .)
    STR             reduce using rule 24 (assign_symbol -> ADDASSIGN .)
    FLOATNUM        reduce using rule 24 (assign_symbol -> ADDASSIGN .)
    [               reduce using rule 24 (assign_symbol -> ADDASSIGN .)


state 32

    (25) assign_symbol -> DIVASSIGN .

    -               reduce using rule 25 (assign_symbol -> DIVASSIGN .)
    ID              reduce using rule 25 (assign_symbol -> DIVASSIGN .)
    EYE             reduce using rule 25 (assign_symbol -> DIVASSIGN .)
    ONES            reduce using rule 25 (assign_symbol -> DIVASSIGN .)
    ZEROS           reduce using rule 25 (assign_symbol -> DIVASSIGN .)
    (               reduce using rule 25 (assign_symbol -> DIVASSIGN .)
    INTNUM          reduce using rule 25 (assign_symbol -> DIVASSIGN .)
    STR             reduce using rule 25 (assign_symbol -> DIVASSIGN .)
    FLOATNUM        reduce using rule 25 (assign_symbol -> DIVASSIGN .)
    [               reduce using rule 25 (assign_symbol -> DIVASSIGN .)


state 33

    (26) assign_symbol -> MULTASSIGN .

    -               reduce using rule 26 (assign_symbol -> MULTASSIGN .)
    ID              reduce using rule 26 (assign_symbol -> MULTASSIGN .)
    EYE             reduce using rule 26 (assign_symbol -> MULTASSIGN .)
    ONES            reduce using rule 26 (assign_symbol -> MULTASSIGN .)
    ZEROS           reduce using rule 26 (assign_symbol -> MULTASSIGN .)
    (               reduce using rule 26 (assign_symbol -> MULTASSIGN .)
    INTNUM          reduce using rule 26 (assign_symbol -> MULTASSIGN .)
    STR             reduce using rule 26 (assign_symbol -> MULTASSIGN .)
    FLOATNUM        reduce using rule 26 (assign_symbol -> MULTASSIGN .)
    [               reduce using rule 26 (assign_symbol -> MULTASSIGN .)


state 34

    (52) slice -> [ . slice_contents ]
    (53) slice_contents -> . range
    (54) slice_contents -> . slice_contents , range
    (55) range -> . term : term
    (56) range -> . term :
    (57) range -> . : term
    (58) range -> . term
    (72) term -> . ( expression )
    (73) term -> . vector
    (74) term -> . INTNUM
    (75) term -> . STR
    (76) term -> . FLOATNUM
    (77) term -> . ID
    (40) vector -> . ID TRANSPOSE
    (41) vector -> . vector TRANSPOSE
    (48) vector -> . [ vector_contents ]

    :               shift and go to state 64
    (               shift and go to state 38
    INTNUM          shift and go to state 46
    STR             shift and go to state 47
    FLOATNUM        shift and go to state 48
    ID              shift and go to state 66
    [               shift and go to state 49

    slice_contents                 shift and go to state 61
    range                          shift and go to state 62
    term                           shift and go to state 63
    vector                         shift and go to state 65

state 35

    (17) print -> PRINT coma_separated .
    (19) coma_separated -> coma_separated . , expression

    ;               reduce using rule 17 (print -> PRINT coma_separated .)
    ,               shift and go to state 67


state 36

    (18) coma_separated -> expression .
    (29) expression -> expression . + term
    (30) expression -> expression . - term
    (31) expression -> expression . / term
    (32) expression -> expression . * term
    (33) expression -> expression . EQL term
    (34) expression -> expression . NEQ term
    (35) expression -> expression . GT term
    (36) expression -> expression . GTE term
    (37) expression -> expression . LT term
    (38) expression -> expression . LTE term

    ,               reduce using rule 18 (coma_separated -> expression .)
    ;               reduce using rule 18 (coma_separated -> expression .)
    +               shift and go to state 68
    -               shift and go to state 69
    /               shift and go to state 70
    *               shift and go to state 71
    EQL             shift and go to state 72
    NEQ             shift and go to state 73
    GT              shift and go to state 74
    GTE             shift and go to state 75
    LT              shift and go to state 76
    LTE             shift and go to state 77


state 37

    (27) expression -> built_in_function . ( term )

    (               shift and go to state 78


state 38

    (72) term -> ( . expression )
    (27) expression -> . built_in_function ( term )
    (28) expression -> . term
    (29) expression -> . expression + term
    (30) expression -> . expression - term
    (31) expression -> . expression / term
    (32) expression -> . expression * term
    (33) expression -> . expression EQL term
    (34) expression -> . expression NEQ term
    (35) expression -> . expression GT term
    (36) expression -> . expression GTE term
    (37) expression -> . expression LT term
    (38) expression -> . expression LTE term
    (39) expression -> . - term
    (42) expression -> . ID dot_operation term
    (43) expression -> . vector dot_operation term
    (78) built_in_function -> . EYE
    (79) built_in_function -> . ONES
    (80) built_in_function -> . ZEROS
    (72) term -> . ( expression )
    (73) term -> . vector
    (74) term -> . INTNUM
    (75) term -> . STR
    (76) term -> . FLOATNUM
    (77) term -> . ID
    (40) vector -> . ID TRANSPOSE
    (41) vector -> . vector TRANSPOSE
    (48) vector -> . [ vector_contents ]

    -               shift and go to state 40
    ID              shift and go to state 41
    EYE             shift and go to state 43
    ONES            shift and go to state 44
    ZEROS           shift and go to state 45
    (               shift and go to state 38
    INTNUM          shift and go to state 46
    STR             shift and go to state 47
    FLOATNUM        shift and go to state 48
    [               shift and go to state 49

    expression                     shift and go to state 79
    built_in_function              shift and go to state 37
    term                           shift and go to state 39
    vector                         shift and go to state 42

state 39

    (28) expression -> term .

    +               reduce using rule 28 (expression -> term .)
    -               reduce using rule 28 (expression -> term .)
    /               reduce using rule 28 (expression -> term .)
    *               reduce using rule 28 (expression -> term .)
    EQL             reduce using rule 28 (expression -> term .)
    NEQ             reduce using rule 28 (expression -> term .)
    GT              reduce using rule 28 (expression -> term .)
    GTE             reduce using rule 28 (expression -> term .)
    LT              reduce using rule 28 (expression -> term .)
    LTE             reduce using rule 28 (expression -> term .)
    ,               reduce using rule 28 (expression -> term .)
    ;               reduce using rule 28 (expression -> term .)
    )               reduce using rule 28 (expression -> term .)
    :               reduce using rule 28 (expression -> term .)
    {               reduce using rule 28 (expression -> term .)
    ID              reduce using rule 28 (expression -> term .)
    PRINT           reduce using rule 28 (expression -> term .)
    CONTINUE        reduce using rule 28 (expression -> term .)
    BREAK           reduce using rule 28 (expression -> term .)
    RETURN          reduce using rule 28 (expression -> term .)
    FOR             reduce using rule 28 (expression -> term .)
    WHILE           reduce using rule 28 (expression -> term .)
    IF              reduce using rule 28 (expression -> term .)


state 40

    (39) expression -> - . term
    (72) term -> . ( expression )
    (73) term -> . vector
    (74) term -> . INTNUM
    (75) term -> . STR
    (76) term -> . FLOATNUM
    (77) term -> . ID
    (40) vector -> . ID TRANSPOSE
    (41) vector -> . vector TRANSPOSE
    (48) vector -> . [ vector_contents ]

    (               shift and go to state 38
    INTNUM          shift and go to state 46
    STR             shift and go to state 47
    FLOATNUM        shift and go to state 48
    ID              shift and go to state 66
    [               shift and go to state 49

    term                           shift and go to state 80
    vector                         shift and go to state 65

state 41

    (42) expression -> ID . dot_operation term
    (77) term -> ID .
    (40) vector -> ID . TRANSPOSE
    (44) dot_operation -> . DOTADD
    (45) dot_operation -> . DOTSUB
    (46) dot_operation -> . DOTMUL
    (47) dot_operation -> . DOTDIV
